Closed Bug 1814659 Opened 3 years ago Closed 3 years ago

DoH native fallback warning should not show after switching to a non-restricted network

Categories

(Firefox :: Security, defect, P2)

Desktop
Unspecified
defect

Tracking

()

RESOLVED FIXED
112 Branch
Tracking Status
firefox112 --- fixed

People

(Reporter: acreskey, Assigned: acreskey)

References

(Blocks 1 open bug)

Details

(Whiteboard: [necko-triaged])

Attachments

(1 file)

When testing the network.trr.display_fallback_warning option on a DoH-restricted network, I correctly see the native fallback warning. But when change networks to a non-restricted one, I'm still seeing the native fallback warning.

What I'm seeing is that while we correctly re-run heuristics after a network change, the canary heuristic still fails until Firefox relaunches.
The canary dns lookup is made with cache disabled so figuring that out now.

It's not correct to fail name lookups when they are made in TRR_DISABLED_MODE.

In the case of the bug, the canary lookup after switching networks was being failed by the native fallback warning logic.

Pushed by acreskey@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/57f2c2b10b32 DoH native fallback warning should not show after switching to a non-restricted network r=valentin,necko-reviewers
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 112 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: