Bug 1814659 - DoH native fallback warning should not show after switching to a non-restricted network r=valentin,necko-reviewers

It's not correct to fail name lookups when they are made in TRR_DISABLED_MODE.

In the case of the bug, the canary lookup after switching networks was being failed by the native fallback warning logic.

Differential Revision: https://phabricator.services.mozilla.com/D168711